@@ -11,7 +11,7 @@ import java.util.LinkedList;
 
 public class Directions {
   private ArrayList<String> directions;
-  private static LinkedList<DbNode> path;
+  private static ArrayList<DbNode> path;
   private static State state;
   private static final double TURN_THRESHOLD = 30;
 
@@ -26,29 +26,41 @@ public class Directions {
 
   public Directions(LinkedList<DbNode> path) {
     this.directions = new ArrayList<>();
-    this.path = path;
+    ArrayList<DbNode> pathNodes = new ArrayList<DbNode>();
+    for (DbNode node : path) {
+      pathNodes.add(node);
+    }
+    this.path = pathNodes;
   }
 
   /** Generates textual directions for the given path */
   private void generateDirections() throws DBException {
     DbNode currNode;
-    DbNode nextNode = path.getFirst();
+    DbNode nextNode = path.get(0);
     double distance = 0;
     boolean stateChange = true;
     double angle = 0;
+    String startFloor = "";
     String message = "";
+    boolean messageCheck = false;
+    double totalDistance = 0;
+    double totalTime = 0;
     for (int i = 0; i <= path.size() - 1; i++) {
       currNode = path.get(i);
       if (i < path.size() - 1) {
         nextNode = path.get(i + 1);
         angle = getAngle(i);
         stateChange = !getState(i + 1).equals(state);
+        totalDistance += getDistance(path.get(i), path.get(i + 1));
       }
       state = getState(i);
       switch (state) {
         case STARTING:
-          if (!path.getFirst().getNodeType().equals("HALL")) {
-            message = "Start by exiting " + path.getFirst().getLongName();
+          if (currNode.getNodeID().equals("NSERV00301")
+              || currNode.getNodeID().equals("NSERV00103")) {
+            message = "Start in the direction of the kiosk arrow ";
+          } else if (!path.get(0).getNodeType().equals("HALL")) {
+            message = "Exit " + path.get(0).getLongName(); // "Start by exiting "
           } else if (!(getLandmark(nextNode) == null)) {
             message =
                 "Start towards "
@@ -61,47 +73,45 @@ public class Directions {
                     + getDistanceString(getDistance(currNode, nextNode));
           }
           break;
-        case EXITING: // not implemented yet, for building change or elevators
+        case EXITING: // not implemented yet, for building change
           directions.add("Exit " + currNode.getLongName());
           break;
-        case CONTINUING: // could add if passing an intersection, "continue past " + landmark
+        case CONTINUING:
           distance += getDistance(currNode, nextNode);
-          if (!message.equals("")) {
-            if (atEndOfHall(nextNode)) {
-              directions.add(message + " and proceed to the end of the hall");
-            } else {
+          if (getState(i - 1).equals(CHANGING_FLOOR)) {
+            message = "Exit " + currNode.getLongName();
+          } else {
+            if (!message.equals("")) {
               directions.add(message); // + " and proceed down the hall");
+              message = "";
+            } else if (stateChange || atIntersection(currNode)) {
+              if (getLandmark(nextNode) == null) {
+                message = "Continue to next intersection " + getDistanceString(distance);
+              } else if (getLandmark(nextNode).equals(nextNode)) {
+                message =
+                    "Go towards " // "Proceed straight towards "
+                        + getLandmark(nextNode).getLongName()
+                        + " "
+                        + getDistanceString(distance);
+                // } else if (atEndOfHall(nextNode)) { //this should go before first if
+                // message = "Continue to the end of the hallway " + getDistanceString(distance);
+              } else if (getState(i - 1).equals(CHANGING_FLOOR)) {
+                message = "Exit " + currNode.getLongName();
+              } else {
+                message =
+                    "Continue past "
+                        + getLandmark(nextNode).getLongName()
+                        + " "
+                        + getDistanceString(distance);
+              }
+              distance = 0;
             }
-            message = "";
-          } else if (stateChange || atIntersection(currNode)) {
-            if (getLandmark(nextNode) == null) {
-              message = "Continue to next intersection " + getDistanceString(distance);
-            } else if (getLandmark(nextNode).equals(nextNode)) {
-              message =
-                  "Go towards " // "Proceed straight towards "
-                      + getLandmark(nextNode).getLongName()
-                      + " "
-                      + getDistanceString(distance);
-            } else if (atEndOfHall(nextNode)) {
-              message = "Continue to the end of the hallway " + getDistanceString(distance);
-            } else {
-              message =
-                  "Continue past "
-                      + getLandmark(nextNode).getLongName()
-                      + " "
-                      + getDistanceString(distance);
-            }
-            distance = 0;
           }
           break;
         case TURNING:
           if (!nextNode.equals(path.get(path.size() - 1))) {
             if (!message.equals("")) {
-              if (i == 1) {
-                directions.add(message + " and turn " + getTurnType(angle, getAngle(i - 1)));
-              } else {
-                directions.add(message + " and turn " + getTurnType(angle, getAngle(i - 1)));
-              }
+              directions.add(message + " and turn " + getTurnType(angle, getAngle(i - 1)));
               message = "";
             } else if (!(getLandmark(currNode) == null)) {
               directions.add(
@@ -121,19 +131,41 @@ public class Directions {
             }
           }
           break;
-        case CHANGING_FLOOR: // not implemented yet
-          if (stateChange) {
-            directions.add(getFloorChangeString(nextNode));
+        case CHANGING_FLOOR:
+          totalTime += 37; // add 37 sec for average floor change time
+          if (!getState(i - 1).equals(CHANGING_FLOOR)) {
+            startFloor = currNode.getLongName();
+          }
+          if (!message.equals("")) {
+            directions.add(message + " and enter " + currNode.getLongName());
+            message = "";
+            messageCheck = true;
+          }
+          if (stateChange && getState(i - 1).equals(CHANGING_FLOOR)) {
+            if (messageCheck) {
+              directions.add("Take " + startFloor + " to floor " + currNode.getFloor());
+              messageCheck = false;
+            } else {
+              directions.add("Enter " + startFloor + " and go to floor " + currNode.getFloor());
+            }
           }
           break;
         case ARRIVING:
           if (getState(i - 1).equals(TURNING)) {
             String turnMessage = "Turn " + getTurnType(angle, getAngle(i - 2));
-            directions.add(turnMessage + " and arrive at " + currNode.getLongName());
+            directions.add(
+                turnMessage
+                    + " and arrive at "
+                    + currNode.getLongName()
+                    + " "
+                    + getTotalTimeString(totalDistance, totalTime));
           } else if (!message.equals("")) {
-            directions.add(message + " and arrive at destination");
+            directions.add(
+                message
+                    + " and arrive at destination "
+                    + getTotalTimeString(totalDistance, totalTime));
           } else {
-            directions.add("Arrive at destination");
+            directions.add("Arrive at destination " + getTotalTimeString(totalDistance, totalTime));
           }
           break;
       }
@@ -141,7 +173,24 @@ public class Directions {
   }
 
   /**
-   * gets the state based off of currNode and nextNode
+   * gets string for total time using average walking speed of 4.6 ft/s and avg elevator ride of 37
+   * sec
+   *
+   * @param totalDistance
+   * @param time
+   * @return String
+   */
+  public static String getTotalTimeString(double totalDistance, double time) {
+    int totalTime = (int) Math.round((totalDistance / 4.6 + time) / 60);
+    if (totalTime <= 0) {
+      return "(Estimated time less than 1 minute)";
+    } else {
+      return "(Estimated time " + totalTime + " minutes)";
+    }
+  }
+
+  /**
+   * gets the state based off of currNode and change in angle
    *
    * @return int, State
    */
@@ -151,18 +200,18 @@ public class Directions {
       return STARTING;
     } else if (i == path.size() - 1) {
       return ARRIVING;
+    } else if ((path.get(i).getNodeType().equals("ELEV")
+            || path.get(i).getNodeType().equals("STAI"))
+        && (path.get(i).getFloor() != path.get(i + 1).getFloor()
+            || path.get(i).getNodeType().equals(path.get(i - 1).getNodeType()))) {
+      return CHANGING_FLOOR;
     } else if (Math.abs(getAngle(i) - getAngle(i - 1)) > TURN_THRESHOLD
         && Math.abs(getAngle(i) - getAngle(i - 1)) < 360 - TURN_THRESHOLD) {
-      double angleChange = Math.abs(getAngle(i) - getAngle(i - 1));
-      // System.out.println(Math.abs(getAngle(i) - getAngle(i - 1)));
       return TURNING;
-    } else if (path.get(i).getFloor() != path.get(i + 1).getFloor()) {
-      return CHANGING_FLOOR;
+
     } else if (!path.get(i).getBuilding().equals(path.get(i + 1).getBuilding())) {
       return EXITING;
     } else {
-      // System.out.println(Math.abs(getAngle(i) - getAngle(i - 1)));
-
       return CONTINUING;
     }
   }
@@ -184,17 +233,14 @@ public class Directions {
       return "right";
     } else if (angleChange <= -1 * TURN_THRESHOLD) {
       return "left";
-    } else if (angleChange < TURN_THRESHOLD
-        && angleChange > -TURN_THRESHOLD) { // eventually will add slight turns
-      return "straight" + angleChange;
     } else {
-      return "other turn type";
+      return "straight" + angleChange;
     }
   }
 
   /**
-   * Gets closest landmark to a node (ie. won't return hallway nodes...or returning hallway nodes->
-   * "end of corridor" or something?)
+   * Gets closest landmark to a node, if the node is a HALL node, returns an adjacent non-hallway
+   * node or null if node is not a HALL node, returns the same node
    *
    * @param node, DbNode
    * @return String, landmark for given node
@@ -202,13 +248,15 @@ public class Directions {
   private static DbNode getLandmark(DbNode node) throws DBException {
     if (node.getNodeType().equals("HALL")) {
       for (DbNode n : MapDB.getAdjacent(node.getNodeID())) {
-        if (!n.getNodeType().equals("HALL")) {
+        if (!n.getNodeType().equals("HALL")
+            && !n.getNodeType().equals("ELEV")
+            && !n.getNodeType().equals("STAI")) {
           return n;
         }
       }
       return null;
     }
-    return node; // change to exclude hallway nodes etc.
+    return node;
   }
 
   /**
@@ -218,23 +266,7 @@ public class Directions {
    * @return String, how far in feet between nodes
    */
   private static String getDistanceString(double distance) {
-    return "(" + Math.round(distance) + " ft)";
-  } // "(Go " + Math.round(distance) + " ft)"
-
-  /**
-   * generates a string "Take ___ to floor __" using floor number and nodeType
-   *
-   * @param node, end node of floor change
-   * @return String
-   */
-  private static String getFloorChangeString(DbNode node) {
-    String direction = "Take ";
-    if (node.getNodeType().equals("ELEV")) {
-      direction += "elevator to floor " + node.getFloor();
-    } else if (node.getNodeType().equals("STAI")) {
-      direction += "stairs to floor " + node.getFloor();
-    }
-    return direction;
+    return "(" + Math.round(distance) + " ft)"; // "(Go " + Math.round(distance) + " ft)"
   }
 
   /**
@@ -260,14 +292,14 @@ public class Directions {
         Math.sqrt(
             Math.pow(nextNode.getX() - currNode.getX(), 2)
                 + Math.pow(nextNode.getY() - currNode.getY(), 2));
-    double conversion = 1;
+    double conversion = 0.338;
     return distance * conversion;
   }
 
   /**
    * Determines if a node is at an intersection by looking for adjacent hallway nodes
    *
-   * @param node
+   * @param node, DbNode
    * @return true, if intersection, false otherwise
    */
   private static boolean atIntersection(DbNode node) throws DBException {
@@ -278,37 +310,14 @@ public class Directions {
           hallNodeCount++;
         }
       }
-      if (hallNodeCount >= 3) {
-        return true;
-      }
-    }
-    return false;
-  }
-
-  /**
-   * Determines if a node is the last node in a hallway
-   *
-   * @param node
-   * @return true, if the node is at the end of the hall, false otherwise
-   */
-  private static boolean atEndOfHall(DbNode node) throws DBException {
-    int hallNodeCount = 0;
-    if (node.getNodeType().equals("HALL")) {
-      for (DbNode n : MapDB.getAdjacent(node.getNodeID())) {
-        if (n.getNodeType().equals("HALL")) {
-          hallNodeCount++;
-        }
-      }
-      if (hallNodeCount <= 1) {
-        return true;
-      }
+      return hallNodeCount >= 3;
     }
     return false;
   }
 
   /** @return directions with numbers at beginning of each line */
   private ArrayList<String> getNumberedDirection() {
-    ArrayList<String> newDirections = new ArrayList<String>();
+    ArrayList<String> newDirections = new ArrayList<>();
     int index = 1;
     if (!this.directions.isEmpty()) {
       for (String s : this.directions) {
@@ -329,7 +338,6 @@ public class Directions {
   public ArrayList<String> getDirections() throws DBException {
     if (!(this.path == null)) {
       this.generateDirections();
-      // this.directions;
       return this.getNumberedDirection();
     } else {
       return null;
